<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Training Wheels</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="training_wheels">Training Wheels</string>
    <string name="individual">Individual</string>
    <string name="title_individual" />
    <string name="exercises">Exercises</string>
    <string name="video">Video</string>
    <string name="reps">Reps</string>
    <string name="textview">TextView</string>
    <string name="sets">Sets</string>
    <string name="exercise_icon">Exercise Icon</string>
    <string name="training">TRAINING</string>
    <string name="sss">sss</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="recommended">Recommended</string>
    <string name="share_button">Share Button</string>
    <string name="calendar_button">Calendar Button</string>
    <string name="add_event">ADD EVENT</string>
    <string name="end_time">End Time</string>
    <string name="start_time">Start Time</string>
    <string name="event_title">Event Title</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="share">Share</string>
    <string name="calendar">Calendar</string>
    <string name="exit">Exit</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
</resources>