<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExerciseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rectangle"
            android:elevation="10dp"
            android:gravity="center"
            android:text="@string/individual"
            android:textSize="30sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:gravity="center"
            card_view:cardBackgroundColor="@color/light_pink"
            card_view:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <WebView
                    android:id="@+id/webView"
                    android:layout_width="320dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"
                    android:gravity="center">

                </WebView>

                <TextView
                    android:id="@+id/Recommended"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="@string/recommended"
                    android:textSize="30sp" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/Sets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/sets"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/setsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text=""
                        android:textSize="30sp" />

                </TableRow>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/Reps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/reps"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/repsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text=""
                        android:textSize="30sp" />
                </TableRow>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>